<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="start">START</string>
    <string name="name">Name</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="trophy_image">Trophy image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="username">Username</string>
    <string name="finish">FINISH</string>
</resources>