<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:contentDescription="@string/trophy_image"
        android:src="@drawable/ic_trophy" />

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hey_congratulations"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="4 out of 5" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/finish"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        android:textSize="24sp"
        />

</LinearLayout>