<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:elevation="18dp"
        app:cardCornerRadius="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/welcome"
                android:textSize="29sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:textSize="16sp"
                android:padding="6dp"
                android:layout_marginTop="12dp"
                android:textStyle="bold"
                android:textColor="@color/grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintTextColor"
                    android:hint="@string/name"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:text="@string/start"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="16dp"
                android:background="@color/design_default_color_primary"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>